packages/default/scss/grid/_layout.scss
/* ... */
@include exports( "filtermenu/layout" ) {

    // Filter menu
    .k-filter-menu-popup {
        width: $kendo-grid-column-menu-width;
    }
    .k-filter-menu {
        box-sizing: border-box;
    }
    .k-filter-menu-container {
        padding: k-map-get( $kendo-spacing, 2 );
        box-sizing: border-box;
        display: flex;
        flex-flow: column nowrap;
        align-items: stretch;
        gap: k-map-get( $kendo-spacing, 2 );

        .k-filter-and {
            width: min-content;
            align-self: start;
        }

        .k-actions {
            margin: 0;
            padding: 0;
        }

        // Angular specific
        kendo-numeric-filter-menu,
        kendo-grid-string-filter-menu,
        kendo-grid-date-filter-menu,
        kendo-grid-numeric-filter-menu,
        kendo-grid-filter-menu-input-wrapper {
            display: flex;
            flex-flow: column nowrap;
            align-items: stretch;
            gap: k-map-get( $kendo-spacing, 2 );
        }
    }

    .k-filter-menu.k-popup,
    .k-grid-filter-popup.k-popup {

        .k-filter-menu-container {
            width: $kendo-grid-column-menu-width;
        }
    }

    .k-popup .k-multicheck-wrap {
        margin: 0;
        padding: 0;
        max-height: 300px;
        font-size: $kendo-list-font-size;
        line-height: $kendo-list-line-height;
        white-space: nowrap;
        overflow: auto;
        list-style: none;

        .k-item,
        .k-check-all-wrap {
            padding-block: $kendo-grid-column-menu-list-item-padding-y;
            padding-inline: $kendo-grid-column-menu-list-item-padding-x;
            display: flex;
            flex-flow: row nowrap;
        }
    }

    .k-filter-selected-items {
        font-weight: bold;
        line-height: normal;
        white-space: nowrap;
    }

    // autofitting requires automatic table layout to measure sizes
    .k-autofitting {
        // sass-lint:disable-block no-important

        width: auto !important;
        table-layout: auto !important;

        .k-table-th,
        td,
        .k-table-td {
            white-space: nowrap !important;
        }

        .k-detail-row {
            display: none !important;
        }
    }

}

@include exports("columnmenu/layout") {

    // Column menu
    .k-column-menu-popup,
    .k-grid-columnmenu-popup {
        width: $kendo-grid-column-menu-width;
        box-sizing: border-box;

        &.k-popup {
            padding-block: $kendo-grid-column-menu-popup-padding-y;
            padding-inline: $kendo-grid-column-menu-popup-padding-x;
            max-width: 100%;
        }

        .k-actions {
            margin: 0;
        }

    }
    .k-column-menu {
        box-sizing: border-box;

        .k-menu:not(.k-context-menu) {
            font-weight: 400;
        }

        .k-expander {
            border: 0;
            background: inherit;

            .k-columnmenu-item {
                display: flex;
                align-items: center;
            }
        }
    }

    .k-column-list {
        padding: 0;
        margin: 0;
        list-style: none;
        max-height: 200px;
        overflow-x: hidden;
        overflow-y: auto;
    }

    .k-column-chooser-title,
    .k-column-list-item {
        padding-block: $kendo-grid-column-menu-list-item-padding-y;
        padding-inline: $kendo-grid-column-menu-list-item-padding-x;
    }

    .k-column-list-item {
        margin: 0;
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        gap: 4px;
        cursor: pointer;
        position: relative;

        .k-checkbox-label {
            margin: 0;
        }
    }

    .k-columns-items-wrap {
        padding-block: $kendo-grid-column-menu-items-wrap-padding-y;
        padding-inline: $kendo-grid-column-menu-items-wrap-padding-x;
    }

    .k-columnmenu-item {
        padding-block: $kendo-grid-column-menu-item-padding-y;
        padding-inline: $kendo-grid-column-menu-item-padding-x;
        outline: 0;
        cursor: pointer;

        > .k-icon,
        > .k-svg-icon {
            margin-inline-end: $kendo-icon-spacing;
        }
    }

    .k-columnmenu-item-wrapper + .k-columnmenu-item-wrapper {
        border-top: 1px solid;
        border-top-color: $kendo-popup-border;
    }

    .k-columnmenu-item-content {
        overflow: hidden;
    }

    .k-column-menu-group-header {
        padding-block: $kendo-grid-column-menu-group-header-padding-y;
        padding-inline: $kendo-grid-column-menu-group-header-padding-x;
        display: flex;
        flex: 0 0 auto;
        position: relative;
        user-select: none;
    }

    .k-column-menu-group-header-text {
        border-bottom-width: $kendo-grid-column-menu-group-header-border-bottom-width;
        border-bottom-style: solid;
        font-size: $kendo-grid-column-menu-group-header-font-size;
        line-height: $kendo-grid-column-menu-group-header-line-height;
        font-weight: bold;
        text-transform: $kendo-grid-column-menu-group-header-text-transform;
        flex: 1 1 auto;
    }

}

